<resources>
    <string name="app_name">Supermarket</string>

    <!-- Strings related to login -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create">Create</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_filter">Filtrar</string>
    <string name="action_logout">Sair</string>
    <string name="action_search">Nome do produto</string>

    <string name="sign_up">Create account</string>
    <string name="sign_up_error_email">Email já cadastrado</string>
    <string name="general_error_dialog_title">Ops, algo deu errado</string>

    <string name="sign_in">Sign in</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="invalid_email">Digite um email válido</string>
    <string name="password_size">a Senha precisa ter ao menos 6 dígitos</string>
    <string name="password_do_not_match">As senhas precisam ser iguais</string>

    <string name="preference_file_key">my_preference</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="product_img_transaction">product_img</string>

    <string name="filter_all">Todos</string>
    <string name="filter_bakery">Padaria</string>
    <string name="filter_dairy">Laticínios</string>
    <string name="filter_fruit">Frutas</string>
    <string name="filter_vegetable">Vegetais</string>
    <string name="filter_meat">Carnes</string>

    <string name="checkout_total">Total: </string>


    <string name="loading_removing_item">Removendo item&#8230;</string>
    <string name="loading_creating_user">Cadastrand&#8230;</string>
    <string name="loading_sign_in_user">Entrando&#8230;</string>
    <string name="loading_products_list">Obtendo list de produtos&#8230;</string>
    <string name="loading_fetch_cart_items">Obtendo carrinho&#8230;</string>
    <string name="loading_adding_cart_item">Adicionando ao carrinho&#8230;</string>

    <string name="add_to_cart">Adicionar ao carrinho</string>
</resources>
